[package]
name = "timezone-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
fuzzy-matcher = "0.3"
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["ico"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
